# r_auth

./: .env  Readme.md  docker-compose.yml
auth_api/: Cargo.toml  Dockerfile  Rocket.toml
auth_api/migrations/2023-11-24-082436_create_users/: up.sql
auth_api/src/: lib.rs  main.rs  models.rs  schema.rs
email_api/: Dockerfile  README.md  bun.lockb  index.ts  package.json
