[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  "0.5.0" 
diesel = { version = "2.1.4", features = ["postgres"] }
dotenv = "0.15.0"
serde_json = "1.0.108"
serde_derive = "1.0.193"
serde = "1.0.193"
log = "0.4.20"
env_logger = "0.10.1"
lapin = "2.3.1"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_postgres_pool"]
